Agregando información al index, y realizando grilla de links

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <body>
         <header class="sticky-top">
             <!-- Nav Bar -->
-            <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
+            <nav class="navbar navbar-expand-lg navbar-dark">
                 <div class="container-fluid">
                     <!-- Logo Museo Redondo-->
                     <a class="navbar-brand" href="#">
@@ -103,46 +103,58 @@
             </nav>
         </header>
         <main class="main-index">
-            <!-- Logo Museo Redondo con cadenas -->
-            <img
-                class="main-index-logo"
-                src="./assets/icons/museo-redondo-logo-cadenas.png"
-                alt=""
-            />
-            <!-- Título principal -->
-            <h1 class="titulo-principal">
-                PATRICIO REY Y SUS REDONDITOS DE RICOTA
-            </h1>
+            <section class="introduction">
+                <!-- Introducción -->
+                <!-- Logo Museo Redondo con cadenas -->
+                <img
+                    class="main-index-logo"
+                    src="./assets/icons/museo-redondo-logo-cadenas.png"
+                    alt=""
+                />
+                <!-- Título principal -->
+                <h1 class="main-title">
+                    PATRICIO REY Y SUS REDONDITOS DE RICOTA
+                </h1>
+            </section>
+            <section>
+                <h2 class="subtitle Welcome">Bienvenidos</h2>
+                <p class="paragraph">
+                    Esto es un humilde tributo a la mejor banda de rock de la
+                    Argentina
+                </p>
+            </section>
             <!-- Cartas -->
-            <section class="index-links">
-                <!-- Carta Biografía -->
-                <article>
-                    <!-- Link Biografía -->
-                    <a class="items-cards" href="./pages/biografia.html"
-                        ><span class="index-text-cards">Biografía</span></a
-                    >
-                </article>
-                <!-- Carta Recitales -->
-                <article>
-                    <!-- Link Recitales -->
-                    <a class="items-cards" href="./pages/recitales.html"
-                        ><span class="index-text-cards">Recitales</span></a
-                    >
-                </article>
-                <!-- Carta Discografía -->
-                <article>
-                    <!-- Link Discografía -->
-                    <a class="items-cards" href="./pages/discografia.html"
-                        ><span class="index-text-cards">Discografía</span></a
-                    >
-                </article>
-                <!-- Carta Comunidad -->
-                <article>
-                    <!-- Link Comunidad -->
-                    <a class="items-cards" href="./pages/comunidad.html"
-                        ><span class="index-text-cards">Comunidad</span>
-                    </a>
-                </article>
+            <section class="index-links-bg">
+                <div class="index-links">
+                    <!-- Carta Biografía -->
+                    <article class="index_biography-link">
+                        <!-- Link Biografía -->
+                        <a href="./pages/biografia.html"
+                            ><span>Biografía</span></a
+                        >
+                    </article>
+                    <!-- Carta Recitales -->
+                    <article class="index_recitals-link">
+                        <!-- Link Recitales -->
+                        <a href="./pages/recitales.html"
+                            ><span>Recitales</span></a
+                        >
+                    </article>
+                    <!-- Carta Discografía -->
+                    <article class="index_discography-link">
+                        <!-- Link Discografía -->
+                        <a href="./pages/discografia.html"
+                            ><span>Discografía</span></a
+                        >
+                    </article>
+                    <!-- Carta Comunidad -->
+                    <article class="index_community-link">
+                        <!-- Link Comunidad -->
+                        <a href="./pages/comunidad.html"
+                            ><span>Comunidad</span></a
+                        >
+                    </article>
+                </div>
             </section>
         </main>
         <footer>
