--- a/pages/biografia.html
+++ b/pages/biografia.html
@@ -98,7 +98,7 @@
             <!-- Indice -->
             <section class="indice-legado">
                 <!-- Titulo Historia -->
-                <h2 class="titulo-principal">BIOGRAFÍA</h2>
+                <h2 class="subtitle">BIOGRAFÍA</h2>
                 <!-- Carta Integrantes -->
                 <a href="#integrantes" class="indice-card indice-card-int">
                     <h5 class="indice-card-title">Integrantes</h5>
@@ -116,7 +116,7 @@
                 <!-- Integrantes -->
                 <section class="integrantes-cards-group">
                     <!-- Sub Titulo Integrantes -->
-                    <h2 class="subtitulo-principal">Integrantes</h2>
+                    <h2 class="subtitle">Integrantes</h2>
                     <!-- Cartas Integrantes -->
                     <div class="card-group">
                         <!-- Carta Indio Solari -->
@@ -282,7 +282,7 @@
             </div>
             <section class="historia" id="historia">
                 <article>
-                    <h2 class="subtitulo-principal">Historia</h2>
+                    <h2 class="subtitle">Historia</h2>
                     <p class="historia_parrafo">
                         Patricio Rey y sus redonditos de ricota fue una banda de
                         rock argentino, oriunda de La Plata. Es considerada como
