Terminado responsive del index

--- a/index.html
+++ b/index.html
@@ -116,45 +116,62 @@
                     PATRICIO REY Y SUS REDONDITOS DE RICOTA
                 </h1>
             </section>
-            <section>
-                <h2 class="subtitle Welcome">Bienvenidos</h2>
-                <p class="paragraph">
+            <!-- Bienvenida -->
+            <section class="welcome">
+                <!-- Título bienvenida -->
+                <h2 class="subtitle welcome-title">Bienvenidos</h2>
+                <!-- Parrafo bienvenida -->
+                <p class="paragraph welcome-p">
                     Esto es un humilde tributo a la mejor banda de rock de la
                     Argentina
                 </p>
             </section>
             <!-- Cartas -->
             <section class="index-links-bg">
-                <div class="index-links">
+                <!-- Texto Vertical -->
+                <aside>
+                    <h3 class="subtitle vertical-lr-text">Museo Redondo</h3>
+                </aside>
+                <div class="index-links-box">
                     <!-- Carta Biografía -->
                     <article class="index_biography-link">
                         <!-- Link Biografía -->
-                        <a href="./pages/biografia.html"
-                            ><span>Biografía</span></a
+                        <a class="index-link" href="./pages/biografia.html"
+                            >Biografía</a
                         >
                     </article>
                     <!-- Carta Recitales -->
                     <article class="index_recitals-link">
                         <!-- Link Recitales -->
-                        <a href="./pages/recitales.html"
-                            ><span>Recitales</span></a
+                        <a class="index-link" href="./pages/recitales.html"
+                            >Recitales</a
                         >
                     </article>
                     <!-- Carta Discografía -->
                     <article class="index_discography-link">
                         <!-- Link Discografía -->
-                        <a href="./pages/discografia.html"
-                            ><span>Discografía</span></a
+                        <a class="index-link" href="./pages/discografia.html"
+                            >Discografía</a
                         >
                     </article>
                     <!-- Carta Comunidad -->
                     <article class="index_community-link">
                         <!-- Link Comunidad -->
-                        <a href="./pages/comunidad.html"
-                            ><span>Comunidad</span></a
+                        <a class="index-link" href="./pages/comunidad.html"
+                            >Comunidad</a
                         >
                     </article>
                 </div>
+                <!-- Texto Vertical -->
+                <aside>
+                    <h3 class="subtitle vertical-rl-text">Museo Redondo</h3>
+                </aside>
+                <!-- Div relleno -->
+                <div></div>
+                <!-- Texto horizontal -->
+                <aside>
+                    <h3 class="subtitle horizontal-text"">Museo Redondo</h3>
+                </aside>
             </section>
         </main>
         <footer>
