Agregado keywords y description

--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <!-- KeyWords -->
+        <meta name="keywords" content="redondos, rock, nacional, patricio, rey, ricota, argentina, under, mística, indio, solari, skay, beilinson, semilla, bucciarelli, sidotti, dawi, rocambole, oktubre, baión, bang, lobo, cordero, mosca, momo, jijiji, bestia, ángel, concierto, misa, ritual, pogo, fuego, clásico, leyenda, contracultura, independencia, epico">
+        <!-- Description -->
+        <meta name="description" content="Todo sobre Los Redondos: su música, su historia, sus letras y el fenómeno cultural que marcó generaciones en Argentina y más allá.">
         <!-- Favicon -->
         <link
             rel="shortcut icon"
