--- a/pages/discografia.html
+++ b/pages/discografia.html
@@ -3,6 +3,16 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <!-- KeyWords -->
+        <meta
+            name="keywords"
+            content="redondos, rock, nacional, patricio, rey, ricota, argentina, under, mística, indio, solari, skay, beilinson, semilla, bucciarelli, sidotti, dawi, rocambole, oktubre, baión, bang, lobo, cordero, mosca, momo, jijiji, bestia, ángel, concierto, misa, ritual, pogo, fuego, clásico, leyenda, contracultura, independencia, epico"
+        />
+        <!-- Description -->
+        <meta
+            name="description"
+            content="Un recorrido por la discografía completa de Patricio Rey y sus Redonditos de Ricota. Álbumes, canciones, letras y la evolución de su inconfundible sonido."
+        />
         <!-- Favicon -->
         <link
             rel="shortcut icon"
