--- a/pages/recitales.html
+++ b/pages/recitales.html
@@ -3,6 +3,15 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <!-- KeyWords -->
+        <meta
+            name="keywords"
+            content="redondos, rock, nacional, patricio, rey, ricota, argentina, under, mística, indio, solari, skay, beilinson, semilla, bucciarelli, sidotti, dawi, rocambole, oktubre, baión, bang, lobo, cordero, mosca, momo, jijiji, bestia, ángel, concierto, misa, ritual, pogo, fuego, clásico, leyenda, contracultura, independencia, epico"
+        />
+        <!-- Description -->
+        <meta name="description" content="Los recitales más icónicos de Los
+        Redondos: fechas, lugares, anécdotas y el fervor de un público
+        inigualable. Reviví la esencia de sus shows en vivo."">
         <!-- Favicon -->
         <link
             rel="shortcut icon"
