Agregando los discos a Discografía

--- a/pages/discografia.html
+++ b/pages/discografia.html
@@ -105,81 +105,145 @@
             </nav>
         </header>
         <main>
-            <!-- Titulo Discografía -->
-            <h2 class="titulo-principal">DISCOGRAFÍA</h2>
-            <!-- Lista de discos -->
-            <ul>
-                <li>
-                    <img
-                        class="discos-img"
-                        src="../assets/img/oktubre.jpg"
-                        alt="oktubre"
-                    />
-                </li>
-                <li>
-                    <img
-                        class="discos-img"
-                        src="../assets/img/corderoatado.jpg"
-                        alt="corderoatado"
-                    />
-                </li>
-                <li>
-                    <img
-                        class="discos-img"
-                        src="../assets/img/momo-sampler.jpg"
-                        alt="momo-sampler"
-                    />
-                </li>
-                <li>
-                    <img
-                        class="discos-img"
-                        src="../assets/img/bang-bang-estas-liquidadop.jpg"
-                        alt="bang-bang-estas-liquidado"
-                    />
-                </li>
-                <li>
-                    <img
-                        class="discos-img"
-                        src="../assets/img/luzbelito.jpg"
-                        alt="luzbelito"
-                    />
-                </li>
-                <li>
-                    <img
-                        class="discos-img"
-                        src="../assets/img/Un-Baion-Para-El-Ojo-Idiota.jpg"
-                        alt="Un-Baion-Para-El-Ojo-Idiota"
-                    />
-                </li>
-                <li>
-                    <img
-                        class="discos-img"
-                        src="../assets/img/bondi-finisterre.jpg"
-                        alt="bondi-finisterre"
-                    />
-                </li>
-                <li>
-                    <img
-                        class="discos-img"
-                        src="../assets/img/gulp.jpg"
-                        alt="gulp"
-                    />
-                </li>
-                <li>
-                    <img
-                        class="discos-img"
-                        src="../assets/img/la-mosca-y-la-sopa.jpg"
-                        alt="la-mosca-y-la-sopa"
-                    />
-                </li>
-                <li>
-                    <img
-                        class="discos-img"
-                        src="../assets/img/lobo-suelto.jpg"
-                        alt="lobo-suelto"
-                    />
-                </li>
-            </ul>
+            <div class="discography-bg">
+                <!-- Titulo Discografía -->
+                <h2 class="subtitle">Discografía</h2>
+                <section class="black-bg"></section>
+                <!-- Discografía -->
+                <section class="discography-disk-list">
+                    <!-- Disco Momo Sampler -->
+                    <section>
+                        <figure
+                            class="discography_disk discography_disk-momo-sampler"
+                        >
+                            <img
+                                class="discography_disk-img"
+                                src="../assets/img/momo-sampler.jpg"
+                                alt="momo-sampler-disco"
+                            />
+                            <h4 class="disk-name">Momo Sampler (2000)</h4>
+                        </figure>
+                        <article class="song-list paragraph">
+                            <h4 class="disk-name">Momo Sampler (2000)</h4>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur
+                                adipisicing elit. Placeat, a.
+                            </p>
+                        </article>
+                    </section>
+                    <!-- Disco último Bondi -->
+                    <section>
+                        <figure
+                            class="discography_disk discography_disk-ultimo-bondi"
+                        >
+                            <img
+                                class="discography_disk-img"
+                                src="../assets/img/bondi-finisterre.jpg"
+                                alt="ultimo-bondi-a-finisterre-disco"
+                            />
+                            <h4 class="disk-name">
+                                Último bondi a Finisterre (1998)
+                            </h4>
+                        </figure>
+                    </section>
+                    <!-- Disco Luz Belito -->
+                    <section>
+                        <figure
+                            class="discography_disk discography_disk-luz-belito""
+                        >
+                            <img
+                                class="discography_disk-img"
+                                src="../assets/img/luzbelito.jpg"
+                                alt="Luz-belito-disco"
+                            />
+                        <h4 class="disk-name">Luz Belito (1996)</h4>
+                        </figure>
+                    </section>
+                    <!-- Disco Cordero Atado -->
+                    <section>
+                        <figure
+                        class="discography_disk discography_disk-cordero-atado"
+                    >
+                        <img
+                            class="discography_disk-img"
+                            src="../assets/img/corderoatado.jpg"
+                            alt="Cordero-Atado-disco"
+                        />
+                        <h4 class="disk-name">Cordero atado (1994)</h4>
+                    </figure>
+                    </section>
+                    <!-- Disco Lobo Suelto -->
+                    <section>
+                        <figure
+                        class="discography_disk discography_disk-lobo-suelto"
+                    >
+                        <img
+                            class="discography_disk-img"
+                            src="../assets/img/lobo-suelto.jpg"
+                            alt="Lobo-sueto-disco"
+                        />
+                        <h4 class="disk-name">Lobo Suelto (1994)</h4>
+                    </figure>
+                    </section>
+                    <section>
+                        <!-- Disco La Mosca y La Sopa -->
+                    <figure class="discography_disk discography_disk-la-mosca">
+                        <img
+                            class="discography_disk-img"
+                            src="../assets/img/la-mosca-y-la-sopa.jpg"
+                            alt="la-mosca-y-la-sopa-disco"
+                        />
+                        <h4 class="disk-name">La mosca y la sopa (1991)</h4>
+                    </figure>
+                    </section>
+                    <!-- Disco Bang Bang -->
+                    <section>
+                        <figure class="discography_disk discography_disk-bang-bang">
+                            <img
+                                class="discography_disk-img"
+                                src="../assets/img/bang-bang-estas-liquidadop.jpg"
+                                alt="bang-bang-estas-liquidado-disco"
+                            />
+                            <h4 class="disk-name">¡Bang! ¡Bang!... Estás liquidado (1989)</h4>
+                        </figure>
+                    </section>
+                    <!-- Disco Ojo Idiota -->
+                    <section>
+                        <figure
+                        class="discography_disk discography_disk-ojo-idiota"
+                    >
+                        <img
+                            class="discography_disk-img"
+                            src="../assets/img/Un-Baion-Para-El-Ojo-Idiota.jpg"
+                            alt="Un-Baion-Para-El-Ojo-Idiota-disco"
+                        />
+                        <h4 class="disk-name">Un Baion Para El Ojo Idiota (1988)</h4>
+                    </figure>
+                    </section>
+                    <!-- Disco Oktubre -->
+                    <section>
+                        <figure class="discography_disk discography_disk-oktubre">
+                            <img
+                                class="discography_disk-img"
+                                src="../assets/img/oktubre.jpg"
+                                alt="oktubre-disco"
+                            />
+                            <h4 class="disk-name">Oktubre (1986)</h4>
+                        </figure>
+                    </section>
+                    <!-- Disco Gulp! -->
+                    <section>
+                        <figure class="discography_disk discography_disk-gulp">
+                            <img
+                                class="discography_disk-img"
+                                src="../assets/img/gulp.jpg"
+                                alt="gulp-disco"
+                            />
+                            <h4 class="disk-name">Gulp! (1985)</h4>
+                        </figure>
+                    </section>
+                </section>
+            </div>
         </main>
         <footer>
             <!-- Logo Footer-->
